--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	Dummy index.html file required to make Netlify build work.
+	GitHub Pages hosted site to serve as a CSS CDN for support.athletic.net. See the repo Readme for instructions.
 </body>
 
 </html>
