added 0.25rem margins to css, updated meet day tools

--- a/html/meetdaytools.html
+++ b/html/meetdaytools.html
@@ -1,11 +1,25 @@
 <head>
-<link rel="stylesheet" type="text/css" href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
+  <link rel="stylesheet" type="text/css" href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
 </head>
 
 <div class="row-block-reverse">
-<div class="coach-image-block" style="background-image: url(https://lh3.googleusercontent.com/Hvyiy7mhkbLWUwBljzl9XmQG__9q-HQjZFFjpDp2sv3crEBFwnMxk-UWSrgPr44hlSYlb_Zui-CAF5N_V_BPvCA=w1500); border-radius: 6px 6px 0 0; background-position: 50% 50%;">
-  <div class="title-block"><h1>Meet Day Tools</h1>
-    <span class="small">Join thousands of coaches using Athletic.net to save time</span>
+  <div class="coach-image-block" style="background-image: url(https://lh3.googleusercontent.com/Hvyiy7mhkbLWUwBljzl9XmQG__9q-HQjZFFjpDp2sv3crEBFwnMxk-UWSrgPr44hlSYlb_Zui-CAF5N_V_BPvCA=w1500); border-radius: 6px 6px 0 0; background-position: 50% 50%;">
+    <div class="title-block">
+      <h1>Meet Day Tools</h1>
+      <span class="small">Powerful Meet Management Software included with Site Supporter Subscriptions</span>
+    </div>
   </div>
 </div>
+<div class="row-block-forward">
+  <div class="card center" style="margin: -150px 7px 0 7px;">
+    <div class="header-red">
+      Seed, Print Heat Sheets, Enter and Publish Results
+    </div>
+    <p>
+      We've integrated seeding, printing heat sheets, field score sheets, and reports, and publishing results directly into Athletic.net! No need for expensive, complex third-party software. When you activate <i class="far fa-play mr025"></i><b>Run Meet</b>, your meet entries are already there. After you've entered results, publish to Athletic.net with the click of a button!
+    </p>
+    <div class="center">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/zp5rG2gB6qI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
 </div>
