added listheader class, meetday tools save progress

--- a/html/meetdaytools.html
+++ b/html/meetdaytools.html
@@ -4,9 +4,10 @@
 
 <div class="row-block-reverse">
   <div class="coach-image-block" style="background-image: url(https://lh3.googleusercontent.com/Hvyiy7mhkbLWUwBljzl9XmQG__9q-HQjZFFjpDp2sv3crEBFwnMxk-UWSrgPr44hlSYlb_Zui-CAF5N_V_BPvCA=w1500); border-radius: 6px 6px 0 0; background-position: 50% 50%;">
-    <div class="title-block">
+    <div class="title-block" style="background: linear-gradient(to right,transparent 0%,rgba(0,0,0,.48) 20%,rgba(0,0,0,.48) 80%,transparent 100%);">
       <h1>Meet Day Tools</h1>
-      <span class="small">Powerful Meet Management Software included with Site Supporter Subscriptions</span>
+      <span class="small">Powerful meet management software <br />
+        for <i class="fas fa-star yellowS mr025"></i>Site Supporters</span>
     </div>
   </div>
 </div>
@@ -21,5 +22,16 @@
     <div class="center">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/zp5rG2gB6qI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+  </div>
+</div>
+<div class="row-block-reverse">
+  <div class="text-element-left-70">
+    <div class="header-green">
+      Seeding
+    </div>
+    <div class="subheader">
+      After initializing the <i class="far fa-play mr025"></i><b>Run Meet</b> feature, events are automatically seeded! You can then review and make adjustments as needed.
+    </div>
+    <h4>Test test test bacon</h4>
   </div>
 </div>
