added bullets to styles, saved meetdaytools progress

--- a/html/meetdaytools.html
+++ b/html/meetdaytools.html
@@ -32,6 +32,11 @@
     <div class="subheader">
       After initializing the <i class="far fa-play mr025"></i><b>Run Meet</b> feature, events are automatically seeded! You can then review and make adjustments as needed.
     </div>
-    <h4>Test test test bacon</h4>
+    <div class="listheader green">Events</div>
+    <ul>
+      <li>Adjust seed settings</li>
+      <li>Reseed event</li>
+      <li>Reset event (unseed all entries)</li>
+    </ul>
   </div>
 </div>
