meetdaytools progress save

--- a/html/meetdaytools.html
+++ b/html/meetdaytools.html
@@ -14,10 +14,11 @@
 <div class="row-block-forward">
   <div class="card center" style="margin: -150px 7px 0 7px;">
     <div class="header-red">
-      Seed, Print Heat Sheets, Enter and Publish Results
+      Seed, Print Heat Sheets, and Enter and Publish Results
     </div>
     <p>
-      We've integrated seeding, printing heat sheets, field score sheets, and reports, and publishing results directly into Athletic.net! No need for expensive, complex third-party software. When you activate <i class="far fa-play mr025"></i><b>Run Meet</b>, your meet entries are already there. After you've entered results, publish to Athletic.net with the click of a button!
+      We've integrated seeding, printing heat sheets, field score sheets, and reports, and publishing results directly into Athletic.net! No need for expensive, complex third-party software. When you activate <i class="far fa-play mr025"></i><b>Run
+        Meet</b>, your meet entries are already there. After you've entered results, publish to Athletic.net with the click of a button!
     </p>
     <div class="center">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/zp5rG2gB6qI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -33,10 +34,85 @@
       After initializing the <i class="far fa-play mr025"></i><b>Run Meet</b> feature, events are automatically seeded! You can then review and make adjustments as needed.
     </div>
     <div class="listheader green">Events</div>
-    <ul>
+    <ul class="reg-ul-green">
       <li>Adjust seed settings</li>
       <li>Reseed event</li>
       <li>Reset event (unseed all entries)</li>
     </ul>
+    <div class="listheader green">
+      Heats/Flights
+    </div>
+    <ul class="reg-ul-green">
+      <li>Add or delete heats</li>
+      <li>Move entries within heat</li>
+      <li>Adjust number of start positions</li>
+    </ul>
+    <div class="listheader green">
+      Entries
+    </div>
+    <ul class="reg-ul-green">
+      <li>Adjust seed mark</li>
+      <li>Add or scratch entries</li>
+      <li>Add or remove relay athletes</li>
+    </ul>
+  </div>
+  <div class="img-element-30">
+    <div class="iconwrapper1">
+      <div class="iconwrapper2 green">
+        <i class="far fa-list m-auto"></i>
+      </div>
+    </div>
+  </div>
+</div>
+<hr />
+<div class="row-block-forward">
+  <div class="img-element-30">
+    <div class="iconwrapper1">
+      <div class="iconwrapper2 blue">
+        <i class="far fa-print m-auto"></i>
+      </div>
+    </div>
+  </div>
+  <div class="text-element-right-70">
+    <div class="header-blue">
+      Reports
+    </div>
+    <div class="subheader">
+      Ready to print!
+    </div>
+    <div class="listheader blue">
+      Available Reports
+    </div>
+    <ul class="reg-ul-blue">
+      <li>Meet program</li>
+      <li>Finish line recording sheets</li>
+      <li>Field event score sheets</li>
+      <li>Team scores</li>
+    </ul>
+  </div>
+</div>
+<hr />
+<div class="row-block-reverse">
+  <div class="text-element-left-70">
+    <div class="header-red">
+      Results
+    </div>
+    <div class="subheader">
+      Easily enter results and publish to Athletic.net
+    </div>
+    <ul class="reg-ul-red">
+      <li>Manually enter results</li>
+      <li>1-click publishing of results to Athletic.net</li>
+      <li>Team scores published to Athletic.net</li>
+      <li>Toggle FAT or hand time</li>
+      <li>Override heat place, event place, or points</li>
+    </ul>
+  </div>
+  <div class="img-element-30">
+    <div class="iconwrapper1">
+      <div class="iconwrapper2 red">
+        <i class="far fa-stopwatch m-auto"></i>
+      </div>
+    </div>
   </div>
 </div>
