meetdaytools save progress (complete?)

--- a/html/meetdaytools.html
+++ b/html/meetdaytools.html
@@ -116,3 +116,15 @@
     </div>
   </div>
 </div>
+<hr />
+<div class="center">
+  <div class="header-green">
+    Available on every meet's Manage page
+  </div>
+    <img src="https://files.helpdocs.io/m4shxzbg12/articles/yjsivhfknx/1584128929686/2020-03-13-1245.png" class="img-shadow-border mb05" />
+    <p>
+      <a class="chevron-rightl05" target="_blank" href="/category/nr0dfytphf-run-the-meet">
+        More about <i class="far fa-play ml025 mr025"></i><b>Run Meet</b>
+      </a>
+    </p>
+</div>
