--- a/html/coachfeatures.html
+++ b/html/coachfeatures.html
@@ -1,3 +1,6 @@
+<!--
+  Page URL: https://support.athletic.net/article/v6x8r2forj-features-for-coaches
+  -->
 <head>
 <link rel="stylesheet" type="text/css" href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
 </head>
