--- a/html/eventdirectorfeatures.html
+++ b/html/eventdirectorfeatures.html
@@ -1,4 +1,6 @@
-
+<!--
+  Page URL: https://support.athletic.net/article/vqu1tq1k4q-features-for-event-directors-and-timers
+  -->
   <head>
   <link rel="stylesheet" type="text/css" href="https://athleticnet.github.io/athletic-support-styles/css/featurestyle.css">
   </head>
