--- a/html/athletesparentsfansfeatures.html
+++ b/html/athletesparentsfansfeatures.html
@@ -35,10 +35,10 @@
       <li><a class="chevron-downl1" href="#progress"><i class="far fa-chart-line mr05"></i>Track Progress</a></li>
       <li><a class="chevron-downl1" href="#registration"><i class="far fa-check-square mr05"></i>Individual Registration</a></li>
       <li><a class="chevron-downl1" href="#log"><img class="mr05 noborder" src="https://www.athletic.net/app/features/images/athlete/runner-red.svg" style="height: 20px;" />Training Log</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="https://www.athletic.net/getapp"><b>Compete</b> in Virtual Meets</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="https://www.athletic.net/getapp"><b>Share</b> Photos &amp; Videos</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="https://www.athletic.net/getapp"><b>Earn</b> Achievements &amp; Badges</a></li>
-      <li><a class="chevron-rightl1" target="_blank" href="https://www.athletic.net/getapp"><b>Follow</b> Teams &amp; Athletes</a></li>
+      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Compete</b> in Virtual Meets</a></li>
+      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Share</b> Photos &amp; Videos</a></li>
+      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Earn</b> Achievements &amp; Badges</a></li>
+      <li><a class="chevron-rightl1" target="_blank" href="/article/urusen2q0f-athletic-app"><b>Follow</b> Teams &amp; Athletes</a></li>
       <li><a class="chevron-rightl1" target="_blank" href="https://www.athletic.net/CrossCountry/Division/Rank.aspx?DivID=42876&D=5000">Hypothetical XC Meets</a></li>
       <li><a class="chevron-rightl1" target="_blank" href="https://www.athletic.net/TrackAndField/Athlete.aspx?AID=1391187">Full Athlete Bios</a></li>
       <li style="font-size: 20px;"><b>FREE</b></li>
