--- a/html/eventdirectorfeatures.html
+++ b/html/eventdirectorfeatures.html
@@ -190,7 +190,7 @@
   <a href="https://live.athletic.net/meets/2473" class="button green ib" target="_blank">
       View the 2019 Oregon 6A-5A State Championship Results
     </a>
-    <a href="https://live.athletic.net/about" class="button chevron-rightl05 ib" style="color: #fff; background-color: #374f3f; border-color: black;" target="_blank">
+    <a href="https://live.athletic.net/about" class="button greenfill chevron-rightl05 ib" target="_blank">
       Learn more
     </a>
 </div>
