fee mgmt updates

--- a/html/entryfeemanagement.html
+++ b/html/entryfeemanagement.html
@@ -125,3 +125,12 @@
     </p>
   </div>
 </div>
+<div class="row-block-forward" style="background-color: #efefef; padding: 20px; display: block;">
+  <div class="header-red">
+    Collect fees for your next meet with Athletic.net!
+  </div>
+    <p>
+      Head to the Events Listing page, then click <b>Create New Event</b>.
+    </p>
+      <a class="button red" href="/article/0cny9fh2px-entry-fee-collection" target="_blank">Learn how to set up fee collection<i class="far fa-chevron-right ml1"></i></a>
+  </div>
