updated blurb about athleticapp

--- a/html/coachfeatures.html
+++ b/html/coachfeatures.html
@@ -338,7 +338,10 @@ For these reasons and more, the team calendar is a great resource to keep your e
     <div class="header-green">Mobile Friendly</div>
     <div class="subheader">Record and/or assign workouts from anywhere</div>
     <p>
-      Built with mobile devices in mind, the training log allows coaches to assign workouts from pretty much anywhere, as well as chart or check their progress. Athletes can also log workout details as they complete them, providing coaches with an amazing tool to stay in-touch with the training progress of all of their athletes.
+      Built with mobile devices in mind, the training log allows coaches to assign workouts from pretty much anywhere, as well as chart or check their progress.
+    </p>
+    <p>
+      Athletes can view assigned workouts, record them, and mark them as completed, all from within AthleticAPP. <a class="chevron-rightl05 ml05" target="_blank" href="/article/urusen2q0f-athletic-app">Learn more about AthleticAPP</a>
     </p>
   </div>
   <div class="img-element-30">
